# multigit-rs

./: .gitignore  Cargo.toml  readme.md
cli/: Cargo.toml
config/: Cargo.toml
config/src/: lib.rs
github/: Cargo.toml
github/src/: github.rs  lib.rs  response.rs
github/src/branches/: api.rs  response.rs
github/src/commits/: api.rs  response.rs
github/src/orgs/: api.rs  response.rs
github/src/pulls/: api.rs  response.rs
github/src/references/: api.rs  response.rs
github/src/repos/: api.rs  response.rs
github/src/teams/: response.rs
github/src/users/: api.rs  response.rs
src/: github.rs  main.rs
web/: Cargo.toml
web-apis/: Cargo.toml
web-apis/src/: main.rs
web-common/: Cargo.toml
web-common/src/: lib.rs
web-front/: Cargo.toml  index.html
web-front/src/: main.rs
web-front/src/components/navigation/: mod.rs
web-front/src/containers/app/: mod.rs
web-front/src/containers/home/: mod.rs
web-front/src/routes/: mod.rs
web-front/src/routes/home/: mod.rs
web-front/src/routes/orgs/: mod.rs
web-front/src/store/: mod.rs
web/src/: main.rs
