[package]
name = "cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.2.6", features = ["derive"] }
env_logger = "0.10.0"
exitcode = "1.1.2"
log = "0.4.17"
tokio = { version = "1.19.2", features = ["full"] }
github = { version = "0.1.0", path = "../github" }
config = { version = "0.1.0", path = "../config" }

