[package]
name = "web-apis"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.2.1"
github = { version = "0.1.0", path = "../github" }
config = { version = "0.1.0", path = "../config" }
web-common = { version = "0.1.0", path = "../web-common" }
log = "0.4.17"
actix-cors = "0.6.4"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"
serde_derive = "1.0.152"
