[package]
name = "web-front"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.68"
gloo-net = "0.2.5"
log = "0.4.17"
serde_json = "1.0.91"
wasm-bindgen = "0.2.83"
wasm-bindgen-futures = "0.4.33"
web-sys = { version = "0.3.60", features = ["console", "HtmlSelectElement", "EventTarget"] }
yew = { version = "0.20.0", features = ["csr"] }
yew-router = "0.17.0"
web-common = {version = "0.1.0", path="../web-common/"}
yewdux = "0.9.0"
stylist = { version = "0.11.0", features = ["yew"] }
ybc = {git = "https://github.com/rednaks/ybc", branch = "alpha-v0.4" }
